--- a/SiteDeEventos/cadastro.html
+++ b/SiteDeEventos/cadastro.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="dark">
 
 <head>
     <meta charset="UTF-8">
@@ -20,12 +20,6 @@
                     <li><a href="eventos.html" class="nav-link px-2 text-white">Eventos</a></li>
                     <li><a href="cadastroe.html" class="nav-link px-2 text-warning">Divulgue o seu!</a></li>
                 </ul>
-
-                <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
-                    <input type="search" class="form-control form-control-dark text-bg-dark" placeholder="Search..."
-                        aria-label="Search">
-                </form>
-
                 <div class="text-end">
                     <a class="btn btn-outline-light me-2" href="login.html" role="button">Login</a>
                     <a class="btn btn-warning" href="cadastro.html" role="button">Cadastro</a>
@@ -34,54 +28,7 @@
         </div>
     </header>
 
-    <section class="text-center" style="background-color:#212529;">
-        <div class="p-5 bg-image" style="
-          background-image: url('https://wallpaperaccess.com/full/127051.jpg');
-          height: 300px;"></div>
-        <div class="card mx-4 mx-md-5 shadow-5-strong" style="
-          margin-top: -100px;
-          background: hsla(0, 7%, 22%, 0.8);
-          backdrop-filter: blur(30px); color: white;
-          ">
-            <div class="card-body py-5 px-md-5">
-
-                <div class="row d-flex justify-content-center">
-                    <div class="col-lg-8">
-                        <h2 class="fw-bold mb-5">Sign up now</h2>
-                        <form>
-                            <!-- 2 column grid layout with text inputs for the first and last names -->
-                            <div class="row">
-                                <div class="col-md-6 mb-4">
-                                    <div class="form-outline">
-                                        <input type="text" id="form3Example1" class="form-control" />
-                                        <label class="form-label" for="form3Example1">First name</label>
-                                    </div>
-                                </div>
-                                <div class="col-md-6 mb-4">
-                                    <div class="form-outline">
-                                        <input type="text" id="form3Example2" class="form-control" />
-                                        <label class="form-label" for="form3Example2">Last name</label>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="form-outline mb-4">
-                                <input type="email" id="form3Example3" class="form-control" />
-                                <label class="form-label" for="form3Example3">Email address</label>
-                            </div>
-                            <div class="form-outline mb-4">
-                                <input type="password" id="form3Example4" class="form-control" />
-                                <label class="form-label" for="form3Example4">Password</label>
-                            </div>
-                            <!-- Submit button -->
-                            <button type="submit" class="btn btn-outline-warning  btn-lg btn-block mb-4">
-                                Cadastrar
-                            </button>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+    
 </body>
 
 </html>
