--- a/SiteDeEventos/evento1.html
+++ b/SiteDeEventos/evento1.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Evento</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="stylePerfilEvento.css">
 </head>
 
 <body>
@@ -23,12 +23,6 @@
                     <li><a href="eventos.html" class="nav-link px-2 text-white">Eventos</a></li>
                     <li><a href="cadastroe.html" class="nav-link px-2 text-warning">Divulgue o seu!</a></li>
                 </ul>
-
-                <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
-                    <input type="search" class="form-control form-control-dark text-bg-dark" placeholder="Search..."
-                        aria-label="Search">
-                </form>
-
                 <div class="text-end">
                     <a class="btn btn-outline-light me-2" href="login.html" role="button">Login</a>
                     <a class="btn btn-warning" href="cadastro.html" role="button">Cadastro</a>
@@ -37,13 +31,12 @@
         </div>
     </header>
     <!-- evento -->
-    <section style="margin-top: 20px;">
+    <section style="margin-top: 10px;">
         <div class="container">
             <div class="card-sl">
                 <!-- header do evento -->
-                <div class="imagem" style=" width: 100%; height: 20vh;">
-                    <img src="https://images.ticket360.com.br/images.ticket360/eventos/interna/26934-20230505131924.jpg"
-                        alt="" style="height:100%; width:  100%;">
+                <div class="imagem"
+                    style="background: url(https://images.even3.com.br/DS1Dqoc6NMtHKNxbsi3lwYZIK8M=/1100x440/smart/even3.blob.core.windows.net/banner/DF592376-8F56-4FB8-8FF5-316D71EA5EA2.0182b0491c5b434b9fcc.JPG) center/cover;">
                 </div>
                 <div class="texto" style="padding: 20px;">
                     <div class="content">
@@ -91,7 +84,7 @@
             <br>
             <div class="card-sl">
                 <div class="d-grid gap-2">
-                    <a class="btn btn-warning" type="button" role="button">Comprar</a>
+                    <a class="btn btn-warning" type="button" role="button" style="height: 20vh;">Comprar</a>
                 </div>
             </div>
             <br>
@@ -108,7 +101,6 @@
                     </div>
                 </div>
             </div>
-        </div>
         </div>
     </section>
     <br>
