--- a/SiteDeEventos/eventos.html
+++ b/SiteDeEventos/eventos.html
@@ -22,12 +22,6 @@
           <li><a href="eventos.html" class="nav-link px-2 text-white">Eventos</a></li>
           <li><a href="cadastroe.html" class="nav-link px-2 text-warning">Divulgue o seu!</a></li>
         </ul>
-
-        <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
-          <input type="search" class="form-control form-control-dark text-bg-dark" placeholder="Search..."
-            aria-label="Search">
-        </form>
-
         <div class="text-end">
           <a class="btn btn-outline-light me-2" href="login.html" role="button">Login</a>
           <a class="btn btn-warning" href="cadastro.html" role="button">Cadastro</a>
@@ -35,60 +29,176 @@
       </div>
     </div>
   </header>
-
   <br>
   <section class="cards">
     <div class="container">
       <div class="row">
-        <div class="col-4">
-          <div class="card-sl">
-            <div class="card-image">
-              <img src="img/ImgEventos/evento03.webp" />
+        <div class="col-lg-4 mb-4">
+          <div class="card">
+            <div class="card-img-top"
+              style=" background: url(https://images.even3.com.br/KMklIale0m_79uk98LjHLuJ_0AQ=/1100x440/smart/even3.blob.core.windows.net/banner/IMG_0243.79cc11dc216040cc8a0f.PNG) center/cover;">
             </div>
-            <div class="card-heading">
-              EVENTO 3
+            <div class="card-body">
+              <div class="title">
+                <h5 class="card-title">INFOGIRL2023</h5>
+              </div>
+              <hr class="featurette-divider">
+              <div class="dataLocal">
+                <p href="" class="card-text"><strong>Local:</strong> Quixadá,CE</p>
+                <p href="" class="card-text"><strong>Data:</strong> 16/06/2023</p>
+              </div>
+              <a href="" class="btn btn-warning btn-sm">Ver evento</a>
             </div>
-            <div class="card-text">
-              [...] Descrição do evento [...]
-            </div>
-            <div class="card-text">
-              Local do evento | Data do Evento
-            </div>
-            <a href="#" class="card-button"> Ver Evento</a>
           </div>
         </div>
-        <div class="col-4">
-          <div class="card-sl">
-            <div class="card-image">
-              <img src="img/ImgEventos/Evento01.webp" />
+        <div class="col-lg-4 mb-4">
+          <div class="card">
+            <div class="card-img-top"
+              style=" background: url(https://images.even3.com.br/pMqP0inbF2aPKt8AoFXjW8KT5ps=/1100x440/smart/even3.blob.core.windows.net/banner/OeventomaisinterdisciplinardaRuralinda.8be4b2410eff4c319e71.png) center/cover;">
             </div>
-            <div class="card-heading">
-              EVENTO 3
+            <div class="card-body">
+              <div class="title">
+                <h5 class="card-title">Evento de Integração e Inovação</h5>
+              </div>
+              <hr class="featurette-divider">
+              <div class="dataLocal">
+                <p href="" class="card-text"><strong>Local:</strong> Recife,PE</p>
+                <p href="" class="card-text"><strong>Data:</strong> 28/06/2023 – 29/06/2023</p>
+              </div>
+              <a href="" class="btn btn-warning btn-sm">Ver evento</a>
             </div>
-            <div class="card-text">
-              [...] Descrição do evento [...]
-            </div>
-            <div class="card-text">
-              Local do evento | Data do Evento
-            </div>
-            <a href="#" class="card-button"> Ver Evento</a>
           </div>
         </div>
-        <div class="col-4">
-          <div class="card-sl">
-            <div class="card-image">
-              <img src="img/ImgEventos/Evento02.webp" />
+        <div class="col-lg-4 mb-4">
+          <div class="card">
+            <div class="card-img-top"
+              style=" background: url(https://images.even3.com.br/DS1Dqoc6NMtHKNxbsi3lwYZIK8M=/1100x440/smart/even3.blob.core.windows.net/banner/DF592376-8F56-4FB8-8FF5-316D71EA5EA2.0182b0491c5b434b9fcc.JPG) center/cover;">
             </div>
-            <div class="card-heading">
-              EVENTO 3
+            <div class="card-body">
+              <div class="title">
+                <h5 class="card-title">Faça seu dinheiro trabalhar para você</h5>
+              </div>
+              <hr class="featurette-divider">
+              <div class="dataLocal">
+                <p href="" class="card-text"><strong>Local:</strong> João Pessoa,PB</p>
+                <p href="" class="card-text"><strong>Data:</strong> 19/08/2023</p>
+              </div>
+              <a href="" class="btn btn-warning btn-sm">Ver evento</a>
             </div>
-            <div class="card-text">
-              [...] Descrição do evento [...]
+          </div>
+        </div>
+      </div>
+      <!-- Linha 2 -->
+      <div class="row" style="margin-top: 10px;">
+        <div class="col-lg-4 mb-4">
+          <div class="card">
+            <div class="card-img-top"
+              style=" background: url(https://images.even3.com.br/H_e3RUvYXvCWCLFFU4tHXLBJFjQ=/1100x440/smart/even3.blob.core.windows.net/banner/LOGOHAPPYHOUR.e6568803dde743c4a7d7.png) center/cover;">
             </div>
-            <div class="card-text">
-              Local do evento | Data do Evento
+            <div class="card-body">
+              <div class="title">
+                <h5 class="card-title">Happy Hour Empresarial</h5>
+              </div>
+              <hr class="featurette-divider">
+              <div class="dataLocal">
+                <p href="" class="card-text"><strong>Local:</strong> Itupeva,SP</p>
+                <p href="" class="card-text"><strong>Data:</strong> 16/06/2023</p>
+              </div>
+              <a href="" class="btn btn-warning btn-sm">Ver evento</a>
             </div>
-            <a href="#" class="card-button"> Ver Evento</a>
+          </div>
+        </div>
+        <div class="col-lg-4 mb-4">
+          <div class="card">
+            <div class="card-img-top"
+              style=" background: url(https://images.even3.com.br/XgdXdwIc2bdb8fNp9Polxsi6dq4=/1100x440/smart/even3.blob.core.windows.net/banner/Artboard2.c3937296abc04a2f9363.jpg) center/cover;">
+            </div>
+            <div class="card-body">
+              <div class="title">
+                <h5 class="card-title">Masterclass de Recursos Humanos</h5>
+              </div>
+              <hr class="featurette-divider">
+              <div class="dataLocal">
+                <p href="" class="card-text"><strong>Local:</strong> São Paulo,SP</p>
+                <p href="" class="card-text"><strong>Data:</strong> 08/07/2023</p>
+              </div>
+              <a href="" class="btn btn-warning btn-sm">Ver evento</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 mb-4">
+          <div class="card">
+            <div class="card-img-top"
+              style=" background: url(https://images.even3.com.br/NbFJqTF1qokbc4nb_pdcNaWpAT8=/1100x440/smart/even3.blob.core.windows.net/banner/A2B4DAF2-C886-4C9B-A6A5-AC3A100440BA.b8a566853c6e49a3ab5b.png) center/cover;">
+            </div>
+            <div class="card-body">
+              <div class="title">
+                <h5 class="card-title">Gemini Aliens</h5>
+              </div>
+              <hr class="featurette-divider">
+              <div class="dataLocal">
+                <p href="" class="card-text"><strong>Local:</strong> São Paulo,SP</p>
+                <p href="" class="card-text"><strong>Data:</strong> 18/06/2023</p>
+              </div>
+              <a href="" class="btn btn-warning btn-sm">Ver evento</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Linha 3 -->
+      <div class="row" style="margin-top: 10px;">
+        <div class="col-lg-4 mb-4">
+          <div class="card">
+            <div class="card-img-top"
+              style=" background: url(https://images.even3.com.br/H_e3RUvYXvCWCLFFU4tHXLBJFjQ=/1100x440/smart/even3.blob.core.windows.net/banner/LOGOHAPPYHOUR.e6568803dde743c4a7d7.png) center/cover;">
+            </div>
+            <div class="card-body">
+              <div class="title">
+                <h5 class="card-title">Happy Hour Empresarial</h5>
+              </div>
+              <hr class="featurette-divider">
+              <div class="dataLocal">
+                <p href="" class="card-text"><strong>Local:</strong> Itupeva,SP</p>
+                <p href="" class="card-text"><strong>Data:</strong> 16/06/2023</p>
+              </div>
+              <a href="" class="btn btn-warning btn-sm">Ver evento</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 mb-4">
+          <div class="card">
+            <div class="card-img-top"
+              style=" background: url(https://images.even3.com.br/XgdXdwIc2bdb8fNp9Polxsi6dq4=/1100x440/smart/even3.blob.core.windows.net/banner/Artboard2.c3937296abc04a2f9363.jpg) center/cover;">
+            </div>
+            <div class="card-body">
+              <div class="title">
+                <h5 class="card-title">Masterclass de Recursos Humanos</h5>
+              </div>
+              <hr class="featurette-divider">
+              <div class="dataLocal">
+                <p href="" class="card-text"><strong>Local:</strong> São Paulo,SP</p>
+                <p href="" class="card-text"><strong>Data:</strong> 08/07/2023</p>
+              </div>
+              <a href="" class="btn btn-warning btn-sm">Ver evento</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 mb-4">
+          <div class="card">
+            <div class="card-img-top"
+              style=" background: url(https://images.even3.com.br/NbFJqTF1qokbc4nb_pdcNaWpAT8=/1100x440/smart/even3.blob.core.windows.net/banner/A2B4DAF2-C886-4C9B-A6A5-AC3A100440BA.b8a566853c6e49a3ab5b.png) center/cover;">
+            </div>
+            <div class="card-body">
+              <div class="title">
+                <h5 class="card-title">Gemini Aliens</h5>
+              </div>
+              <hr class="featurette-divider">
+              <div class="dataLocal">
+                <p href="" class="card-text"><strong>Local:</strong> São Paulo,SP</p>
+                <p href="" class="card-text"><strong>Data:</strong> 18/06/2023</p>
+              </div>
+              <a href="" class="btn btn-warning btn-sm">Ver evento</a>
+            </div>
           </div>
         </div>
       </div>
