--- a/SiteDeEventos/index.html
+++ b/SiteDeEventos/index.html
@@ -41,8 +41,8 @@
         <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
       </div>
       <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="img/495782157230350.jpg" alt="">
+        <div class="carousel-item active" style=" background: url(img/495782157230350.jpg) center/cover;">
+
           <div class="container">
             <div class="carousel-caption text-start">
               <h1>Divulgue o seu evento!</h1>
@@ -52,23 +52,27 @@
             </div>
           </div>
         </div>
-        <div class="carousel-item">
-          <img
-            src="https://images.even3.com.br/-hQEgm4Aa9hWfm14gagaBS-433Q=/1100x440/smart/even3.blob.core.windows.net/banner/even3-1100-440.21a2f27266ab45eda08f.png"
-            alt="">
+        <div class="carousel-item"
+          style=" background: url(https://images.even3.com.br/KMklIale0m_79uk98LjHLuJ_0AQ=/1100x440/smart/even3.blob.core.windows.net/banner/IMG_0243.79cc11dc216040cc8a0f.PNG) center/cover;">
           <div class="container">
             <div class="carousel-caption text-start">
+              <h1>INFOGIRL 2023</h1>
+              <p>O Infogirl é um evento realizado anualmente pelo Programa de Educação Tutorial/Conexão de Saberes (PET
+                TI), que busca incentivar a inclusão de meninas do ensino médio e a permanência de mulheres da graduação
+                na área de Tecnologia da Informação.
+              </p>
               <button class="btn btn-lg btn-warning" href="evento1.html">Ver evento</button>
             </div>
           </div>
         </div>
-        <div class="carousel-item">
-          <img
-            src="https://images.even3.com.br/polRbWA6Z3yC_tkbK0f3ePLOCGc=/1100x440/smart/even3.blob.core.windows.net/banner/20221003_BannerSocial.e6d36550b21140b9b5aa.png"
-            alt="">
+        <div class="carousel-item"
+          style="background: url(https://images.even3.com.br/pMqP0inbF2aPKt8AoFXjW8KT5ps=/1100x440/smart/even3.blob.core.windows.net/banner/OeventomaisinterdisciplinardaRuralinda.8be4b2410eff4c319e71.png) center/cover;">
           <div class="container">
             <div class="carousel-caption text-start">
-              <h1></h1>
+              <h1>Evento de Integração e Inovação</h1>
+              <p>O Evento de Integração e Inovação (EII) é um movimento realizado por estudantes e que busca trazer,
+                para o ambiente universitário, temáticas interdisciplinares ligadas à inovação.
+              </p>
               <button class="btn btn-lg btn-warning" href="evento2">Ver evento</button>
             </div>
           </div>
@@ -96,9 +100,7 @@
         <!-- Card1 -->
         <div class="col-md-4">
           <div class="card-sl">
-            <div class="card-image">
-              <img
-                src="img/ImgEventos/Evento01.webp" />
+            <div class="card-image" style="background: url(img/ImgEventos/Evento01.webp) center/cover;">
             </div>
             <div class="card-heading">
               EVENTO 1
@@ -115,8 +117,7 @@
         <!-- Card2 -->
         <div class="col-md-4">
           <div class="card-sl">
-            <div class="card-image">
-              <img src="img/ImgEventos/Evento02.webp" />
+            <div class="card-image" style="background: url(img/ImgEventos/Evento02.webp) center/cover;">
             </div>
             <div class="card-heading">
               EVENTO 2
@@ -133,8 +134,7 @@
         <!-- Card3 -->
         <div class="col-md-4">
           <div class="card-sl">
-            <div class="card-image">
-              <img src="img/ImgEventos/evento03.webp" />
+            <div class="card-image" style=" background: url(img/ImgEventos/evento03.webp) center/cover;">
             </div>
             <div class="card-heading">
               EVENTO 3
@@ -152,7 +152,6 @@
     </div>
   </section>
   <br>
-
   <section class="text-white text-center text-bg-dark">
     <div class="container">
       <div class="row">
